Fixed button sizes on mobile.

--- a/style.css
+++ b/style.css
@@ -145,18 +145,11 @@ a.btn-sched-chat,
 a.btn-sched-dentrix,
 a.btn-learn-more {
 	display: block;
-	width: 15ch; 	/* ========== default */
+	width: max-content;
 	margin: 0 auto;
-	padding: 0.75em;
-	font-size: 1.2em;
-}
-
-a.btn-sched-chat {
-	width: 20ch;
-}
-
-a.btn-sched-dentrix {
-	width: 23ch;
+	padding: 0.5em 0.75em;
+	font-size: 1em;
+	font-size: clamp(1em, 3vw, 1.2em);
 }
 
 /* Helper classes */
@@ -218,6 +211,12 @@ footer .contact a {
 	color: white;
 	line-height: 1.75;
 	text-decoration: none;
+}
+
+.contact address li {
+	display: grid;
+	grid-template-columns: 3ch 1fr;
+	column-gap: 1em;
 }
 
 .call-to-action p {
